changed all http to https to comply with heroku security stuff

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,10 +9,10 @@
     rel="stylesheet" type="text/css">
   <link href="/static/css/style.css" type="text/css" rel="stylesheet">
   <link
-    href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.5.min.css"
+    href="https://cdn.pydata.org/bokeh/release/bokeh-0.12.5.min.css"
     rel="stylesheet" type="text/css">
   <link
-    href="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.5.min.css"
+    href="https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.5.min.css"
     rel="stylesheet" type="text/css">
   <script
     src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
@@ -20,9 +20,9 @@
   <script
     src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
   </script>
-  <script src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.5.min.js">
+  <script src="https://cdn.pydata.org/bokeh/release/bokeh-0.12.5.min.js">
   </script>
-  <script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.5.min.js">
+  <script src="https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.5.min.js">
   </script>
 </head>
 <body>
