added login screen

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>PDSG Mailchimp Dashboard</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link
@@ -33,7 +33,7 @@
       <div class="col-sm-2"></div>
       <div class="col-sm-8 text-left">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">Philadelphia Datathon Project</a>
+          <a class="navbar-brand" href="/">PDSG Mailchimp Dashboard</a>
         </div>
       </div>
       <div class="col-sm-2"></div>
