--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,7 +1,31 @@
 /* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
-  margin-bottom: 0;
-  border-radius: 0;
+    margin-bottom: 0;
+    border-radius: 0;
+}
+
+.hugespacer {
+    height: 50px;
+}
+
+.bigspacer {
+    height: 20px;
+}
+
+.spacer {
+    height: 10px;
+}
+
+.smallspacer {
+    height: 5px;
+}
+
+input[type="username"] {
+    margin-bottom: 10px;
+}
+
+input[type="password"] {
+    margin-bottom: 20px;
 }
 
 // /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
