--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,7 +7,7 @@
   <div class="col-sm-3"></div>
   <div class="col-sm-6">
     <form class="form-signin" action="/login" method="POST">
-      <h1 class="form-signin-heading">Please login</h1>
+      <h1 class="form-signin-heading">Log in to view</h1>
       <input type="username" class="form-control" name="username"
       placeholder="Username" required="" autofocus="" />
       <input type="password" class="form-control" name="password"
