added a little description over graph

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>Number of MailChimp Signups</h1>
+  <p>Hover over points to see information about individual users.</p>
   <p>
     Split signups by:
   </p>
